# projeto-senac-2026

./: LICENSE  README.md  medias_finais.txt
api/: .gitignore  index.html  pyproject.toml
api/migrations/: env.py
api/tests/: conftest.py  test_db.py
api/viajei_api/: app.py  settings.py
app/: about.html  auth.html  form.html  index.html
app/images/: test-image.avif
app/scripts/: form.js  modal.js
app/style/: about.css  form.css  index.css  style.css
docs/: index.html
proj/: examples.py  index.html  lista.py
proj/arquivos/: index.html
proj/arquivos/exercicios/: ex13.py  ex7.py
proj/classes/: gato.py
proj/desafios/: README.org
proj/desafios/src/: Estacionamento.py
proj/exceptions/: casa.py  main.py
proj/exceptions/exercicios/ex1/: divisao.py  main.py
proj/exceptions/exercicios/ex2/: conversor.py  main.py
proj/exceptions/exercicios/ex3/: entrada_invalida.py
proj/exceptions/exercicios/ex4/: main.py
proj/exceptions/exercicios/ex5/: main.py
proj/exceptions/exercicios/ex7/: main.py
proj/exercicios/: examples.py
proj/exercicios/lista/: lista.py  lista_ex.html  lista_ex.md
proj/heranca_polimorfismo/: character.py  mage.py  warrior.py
