[project]
name = "viajei_api"
version = "0.1.0"
description = "Esta é a API (application interface) do projeto Viajei"
authors = [
    {name = "João Augusto",email = "joaoaugustolaner@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "typos (>=1.47.2,<2.0.0)"
]

[tool]
[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'double'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=viajei_api', '--cov-context=test']

[tool.typos.files]
extend-exclude = ["*.md"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev viajei_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv'
post_test = 'coverage html --show-contexts'